# flow

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.factory/: settings.json
.github/workflows/: deploy.yml
doc/: 0001-system-architecture-adr.md
docs/plans/: 2026-03-09-frontend-design.md  2026-03-09-frontend-implementation.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/chart/: CandlestickChart.tsx  ChartToolbar.tsx  IndicatorPanel.tsx  IndicatorsDropdown.tsx  SymbolHeader.tsx
frontend/src/components/common/: Badge.tsx  Button.tsx  Card.tsx  ComingSoonPage.tsx  SearchInput.tsx  Skeleton.tsx
frontend/src/components/layout/: AppLayout.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/components/ticker/: AddTickerModal.tsx  PriceChange.tsx  RangeBar.tsx  SparklineChart.tsx  TickerCard.tsx  TickerRow.tsx
frontend/src/hooks/: useHealth.ts  usePrices.ts  useSummary.ts  useTickers.ts
frontend/src/lib/: constants.ts  formatters.ts  indicators.ts
frontend/src/pages/: Chart.tsx  Dashboard.tsx  Portfolio.tsx  Screener.tsx  Watchlist.tsx
frontend/src/stores/: uiStore.ts
frontend/src/types/: index.ts
src/flow/: cli.py  config.py  models.py
src/flow/api/: app.py  auth.py
src/flow/ingestion/: fetcher.py  pipeline.py
src/flow/storage/: duckdb.py  parquet.py
tests/: conftest.py  test_api.py  test_duckdb.py  test_fetcher.py  test_parquet_storage.py  test_pipeline.py
(+1 files in other folders)
